{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 115,
  "lineage": "e9a15961-0d33-80d2-ecd3-d33ef13137b9",
  "resources": [
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-02917cec4fb824075",
            "description": "Allow 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02917cec4fb824075",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2ee421bea7a463f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB sg",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DB sg"
            },
            "tags_all": {
              "Name": "DB sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sgs.aws_security_group.sg_lambda",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-0e2ee421bea7a463f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2ee421bea7a463f",
            "ingress": [],
            "name": "Lambda sg",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lambda sg"
            },
            "tags_all": {
              "Name": "Lambda sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:network-acl/acl-07d4f6aa5cda6c975",
            "default_network_acl_id": "acl-07d4f6aa5cda6c975",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07d4f6aa5cda6c975",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "701837564712",
            "subnet_ids": [
              "subnet-013152ea2afa40f61",
              "subnet-0206e5579d9e17cdf",
              "subnet-02cf00c3507bc3495",
              "subnet-0a1f41a2a27e03cf2",
              "subnet-0bbe5c65fb58e9d5e",
              "subnet-0eb58b90de5577f7b"
            ],
            "tags": {
              "Name": "default-network-acl"
            },
            "tags_all": {
              "Name": "default-network-acl"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.priv-subnet-1",
            "module.vpc.aws_subnet.priv-subnet-2",
            "module.vpc.aws_subnet.priv-subnet-3",
            "module.vpc.aws_subnet.priv-subnet-4",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_subnet.pub-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:security-group/sg-090e9591e63713d91",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090e9591e63713d91",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "701837564712",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c78102000bfdfda5",
            "association_id": "eipassoc-0223b9e147a4ed16b",
            "domain": "vpc",
            "id": "eipalloc-0c78102000bfdfda5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d781a3b4216e854a",
            "private_dns": "ip-10-0-10-142.ec2.internal",
            "private_ip": "10.0.10.142",
            "public_dns": "ec2-3-211-10-178.compute-1.amazonaws.com",
            "public_ip": "3.211.10.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:internet-gateway/igw-0392866d3923c19c7",
            "id": "igw-0392866d3923c19c7",
            "owner_id": "701837564712",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c78102000bfdfda5",
            "connectivity_type": "public",
            "id": "nat-09d9838fe1f8f84b3",
            "network_interface_id": "eni-0d781a3b4216e854a",
            "private_ip": "10.0.10.142",
            "public_ip": "3.211.10.178",
            "subnet_id": "subnet-0bbe5c65fb58e9d5e",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:route-table/rtb-07ae26a3da7986459",
            "id": "rtb-07ae26a3da7986459",
            "owner_id": "701837564712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09d9838fe1f8f84b3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Route-Table"
            },
            "tags_all": {
              "Name": "Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:route-table/rtb-02a8b939e72b66340",
            "id": "rtb-02a8b939e72b66340",
            "owner_id": "701837564712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0392866d3923c19c7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ddf36f24c3388d7",
            "route_table_id": "rtb-07ae26a3da7986459",
            "subnet_id": "subnet-013152ea2afa40f61"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-1",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-2-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fd9cfef7e06b70c",
            "route_table_id": "rtb-07ae26a3da7986459",
            "subnet_id": "subnet-0eb58b90de5577f7b"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-2",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-3-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067bb690d29e4e516",
            "route_table_id": "rtb-07ae26a3da7986459",
            "subnet_id": "subnet-02cf00c3507bc3495"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-3",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Priv-sub-4-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd64f240b2aa47c5",
            "route_table_id": "rtb-07ae26a3da7986459",
            "subnet_id": "subnet-0206e5579d9e17cdf"
          },
          "dependencies": [
            "module.vpc.aws_eip.ngw-eip",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.Private_route_table",
            "module.vpc.aws_subnet.priv-subnet-4",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-sub-1-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fa2189067fff335",
            "route_table_id": "rtb-02a8b939e72b66340",
            "subnet_id": "subnet-0bbe5c65fb58e9d5e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.Public_route_table",
            "module.vpc.aws_subnet.pub-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pub-sub-2-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0953e0952410aa647",
            "route_table_id": "rtb-02a8b939e72b66340",
            "subnet_id": "subnet-0a1f41a2a27e03cf2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.Public_route_table",
            "module.vpc.aws_subnet.pub-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-013152ea2afa40f61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013152ea2afa40f61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet1"
            },
            "tags_all": {
              "Name": "priv_subnet1"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0eb58b90de5577f7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb58b90de5577f7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet2"
            },
            "tags_all": {
              "Name": "priv_subnet2"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-02cf00c3507bc3495",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cf00c3507bc3495",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet3"
            },
            "tags_all": {
              "Name": "priv_subnet3"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0206e5579d9e17cdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0206e5579d9e17cdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet4"
            },
            "tags_all": {
              "Name": "priv_subnet4"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0bbe5c65fb58e9d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbe5c65fb58e9d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet1"
            },
            "tags_all": {
              "Name": "pub-subnet1"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:subnet/subnet-0a1f41a2a27e03cf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1f41a2a27e03cf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701837564712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet2"
            },
            "tags_all": {
              "Name": "pub_subnet2"
            },
            "vpc_id": "vpc-009e6da9624efed40"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701837564712:vpc/vpc-009e6da9624efed40",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d4f6aa5cda6c975",
            "default_route_table_id": "rtb-00d8147f24f68bd67",
            "default_security_group_id": "sg-090e9591e63713d91",
            "dhcp_options_id": "dopt-058777cb8eb7c941c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-009e6da9624efed40",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d8147f24f68bd67",
            "owner_id": "701837564712",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}